FIX: frontcam on mobile

--- a/src/containers/callPage/index.scss
+++ b/src/containers/callPage/index.scss
@@ -1,7 +1,7 @@
 .myVideo {
     position: absolute;
-    right: 0em;
-    top: 0em;
+    right: 0.2em;
+    top: 0.2em;
     height: 20%;
     cursor: all-scroll;
     border-radius: 7px;
